kubernetes/challenge-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: wordtree
  name: challenge-deployment
  labels:
    app: challenge-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: challenge-service
  template:
    metadata:
      name: challenge-service
      labels:
        app: challenge-service
    spec:
      containers:
      - name: challenge-service
        image: 
        ports:
        - containerPort: 5001
