kubernetes/essay-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: wordtree
  name: essay-deployment
  labels:
    app: essay-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: essay-service
  template:
    metadata:
      name: essay-service
      labels:
        app: essay-service
    spec:
      containers:
      - name: essay-service
        image: 
        ports:
        - containerPort: 5006
