kubernetes/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: wordtree
  name: user-deployment
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      name: user-service
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: 
        ports:
        - containerPort: 5010
