kubernetes/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: wordtree
spec:
  type: NodePort
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5010
      nodePort: 30001
---
apiVersion: v1
kind: Service
metadata:
  name: challenge-service
  namespace: wordtree
spec:
  type: NodePort
  selector:
    app: challenge-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5001
      nodePort: 30002
---
apiVersion: v1
kind: Service
metadata:
  name: nut-service
  namespace: wordtree
spec:
  type: NodePort
  selector:
    app: nut-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5011
      nodePort: 30003
---
apiVersion: v1
kind: Service
metadata:
  name: word-service
  namespace: wordtree
spec:
  type: NodePort
  selector:
    app: word-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5007
      nodePort: 30004
---
apiVersion: v1
kind: Service
metadata:
  name: essay-service
  namespace: wordtree
spec:
  type: NodePort
  selector:
    app: essay-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5006
      nodePort: 30005
---
apiVersion: v1
kind: Service
metadata:
  name: community-service
  namespace: wordtree
spec:
  type: NodePort
  selector:
    app: community-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5015
      nodePort: 30006
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: wordtree
spec:
  type: NodePort
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5015
      nodePort: 30007
