kubernetes/challenge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: challenge-service
  namespace: wordtree
spec:
  type: ClusterIP
  selector:
    app: challenge-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5001
