kubernetes/essay-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: essay-service
  namespace: wordtree
spec:
  type: ClusterIP
  selector:
    app: essay-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5006
