kubernetes/nut-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nut-service
  namespace: wordtree
spec:
  type: ClusterIP
  selector:
    app: nut-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5011
