kubernetes/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: wordtree
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5010
