kubernetes/word-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: word-service
  namespace: wordtree
spec:
  type: ClusterIP
  selector:
    app: word-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5007
