kubernetes/4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: wordtree
  name: wordtree-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Allow-Origin: $http_origin";
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /challenge
        backend:
          service: 
            name: challenge-service
            port: 
              number: 8080
      - pathType: Prefix
        path: /user
        backend:
          service: 
            name: user-service
            port: 
              number: 8080
      - pathType: Prefix
        path: /nut
        backend:
          service: 
            name: nut-service
            port: 
              number: 8080
      - pathType: Prefix
        path: /community
        backend:
          service: 
            name: community-service
            port: 
              number: 8080
